# DiscFinder

./: .gitignore  .gitmodules  README.md  m5_reader.py  m5_reader_test.py
doc/: MagicRF.htm  README.md
doc/MagicRF_bestanden/: element.js  main_nl.js  translate_c.js  translate_un.htm
rfid/: RFIDCommands.cpp  RFIDCommands.h  RFIDParser.cpp  RFIDParser.h  RFIDUtil.cpp  RFIDUtil.h  rfid.ino
rfid_test/: CMakeLists.txt  README.md
rfid_test/src/: StreamOutputMatcher.h  TestRFIDArduino.cpp  TestRFIDCommands.cpp  TestRFIDParser.cpp
rfid_test/src/arduino_fakes/: ArduinoGlobals.cpp  ArduinoGlobals.h  Stream.cpp  Stream.h  UART.h
